duicontrolpanel (0.11.8~unreleased) unstable; urgency=low

  * new version

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 16 Feb 2011 11:39:23 +0100

duicontrolpanel (0.11.7.1) unstable; urgency=low

  * Fixes that the outprocess was disabled by mistake

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 17 Feb 2011 11:02:53 +0100

duicontrolpanel (0.11.7) unstable; urgency=low

  [ Robert Manner ]
  * Changes: new briefview type - Slider
  * Changes: Support for briefviews with horizontal layouted value line

  [ Sandor Pinter ]
  * Fixes: NB#227727 - Applications list in Settings is not sorted
    alphabetic

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 15 Feb 2011 16:57:31 +0100

duicontrolpanel (0.11.6.3) unstable; urgency=low

  * disables ft_dcpappletobject temporarily

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Feb 2011 12:19:21 +0100

duicontrolpanel (0.11.6.2) unstable; urgency=low

  * Fixes the flashing before the appletpage openings
  * Changes: Fixed portrait orientation

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 10 Feb 2011 12:05:19 +0100

duicontrolpanel (0.11.6.1) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#224500 - Highlight shown when pressing a static label in
    Notification settings

  [ Robert Manner ]
  * Fixes: NB#225161 - Incorrect title on dialog when Settings does not
    respond anymore
  * Fixes: NB#225295 - [TASK] On relaunching the settings app, the view
    is still showing the bottom list of categories
  * Changes: It is now configurable if the category icons are above or
    below the applet icons using the ComponentOrder key in the
    .cpcategory files
  * Changes: Makes -outprocess mode default on usual running ways

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 09 Feb 2011 20:47:25 +0100

duicontrolpanel (0.11.5) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#220905 - Personalise settings menu looks different on
    second opening