@@ -10,6 +10,7 @@ Icon=icon-m-settings-applications
 
 Aliases=Uncategorized
 Translation-catalogs=
+AppletSort=SortByTitle
 
 Order=30
 
