@@ -1,8 +1,10 @@
 duicontrolpanel (0.11.8~unreleased) unstable; urgency=low
 
-  * new version
+  * Fixes: NB#227727 - Applications list in Settings is not sorted
+    alphabetic (now it is sorted by translated title and not engineering
+    translation)
 
- -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 16 Feb 2011 11:39:23 +0100
+ -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 17 Feb 2011 13:08:52 +0100
 
 duicontrolpanel (0.11.7.1) unstable; urgency=low
 
